# spacytextblob

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.ipynb  README.md  justfile  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt  spacy-universe.json  textblob-fr-example.py  universe.json  usage.py
.github/workflows/: pytest.yml
docs/: api.md  changelog.md  contributing.md  getting_started.md  index.md  textblob_extensions.md
docs/code_examples/: textblob_fr_extension.py
docs/examples/: example.ipynb
docs/static/reference_code/: spacytextblob_example.py  textblob_de_example.py  textblob_example.py  textblob_fr_example.py
docs/tutorial/: examples.md  getting_started.md  installation.md  textblob_extensions.md
notebooks/: playground.ipynb
scripts/: build_docs.sh  publish_pypi.sh
spacytextblob/: __init__.py  spacytextblob.py  textblob.py
tests/: CONTRIBUTING.md  test_textblob.py
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/blog/: 2020-11-12-first-post.md  2020-11-12-go-live.md  2021-04-02-spacy3.md
website/docs/: api.ipynb  api.md  example.ipynb  example.md  getting_started.ipynb  getting_started.md
website/src/css/: custom.css
website/src/pages/: index.js
