[tool.poetry]
name = "spacytextblob"
version = "4.0.0"
description = "A TextBlob sentiment analysis pipeline component for spaCy."
authors = ["SamEdwardes <edwardes.s@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SamEdwardes/spacytextblob"
documentation = "https://spacytextblob.netlify.app/"
keywords = ["python", "spacy", "textblob", "nlp"]

[tool.poetry.dependencies]
python = "^3.7"
textblob = "^0.15.3"
spacy = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm"}
textblob-fr = "^0.2.0"
mkdocs-material = "^8.1.11"
textblob-de = "^0.4.3"
mdx-include = "^1.4.1"
pytest-xdist = "^2.5.0"
rich = "^11.2.0"
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
