[tool.poetry]
name = "spacytextblob"
version = "4.0.1"
description = "A TextBlob sentiment analysis pipeline component for spaCy."
authors = ["SamEdwardes <edwardes.s@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SamEdwardes/spacytextblob"
documentation = "https://spacytextblob.netlify.app/"
keywords = ["python", "spacy", "textblob", "nlp"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
textblob = "^0.15.3"
numpy = "^1.15"
spacy = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
textblob-fr = "^0.2.0"
mkdocs-material = "^8.1.11"
textblob-de = "^0.4.3"
mdx-include = "^1.4.1"
pytest-xdist = "^2.5.0"
rich = "^11.2.0"
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
